07/03/2020
- Integrated full Script functionality into the ActionMgr execution queue
- Added hasAttribute, addAttribute functionality to specials scripting
- Added Script management functions (getScript, loadVariable, addScript) to specials scripting

07/01/2020
- Added the skeleton of the Script object for in-zone stand-alone specials scripts
- Added a few flags
- Redid the Attributes to be maintained only at the Physical level

06/28/2020
- Added the light and extinguish commands
- Added the summon command
- Added the VisibleOnly flag to Actions, marking some as only working if the player can see
- Made dark rooms appear dark if the player does not have a light

06/27/2020
- Made door examine2 and roomdesc2 use examine and roomdesc if the 2 version is empty
- Added NoGet functionality
- Made a version of review replacement that gets rid of "the" in front of things like "the golem"
- Some other additional bugfixes and formatting fixes


06/25/2020
- Added the Social class as a sub-class to Action
- Added skeleton for the Talent class, sub to Action
- Added the StrFormatter class to format %n-type review strings
- Modified the parser to be a bit more modular
- Added socials basic functionality and the wave command (not tested with targets yet)

06/18/2020
- Added the goto command
- Added some container management specials functions
- Added the kill command
- Added checks to force id to be lowercase
- Made deathrooms with the Death flag kill players that enter

06/16/2020
- Fixed Python integration that caused a crash when a script exception happened
- Added login menu framework
- Added more flags
- Added the dig command

06/14/2020
- Fixed a word wrap error when a colorcode appeared right before the wrap length
- Finished the PageHandler and set it up to display the login message (usually motd)
- Changed Entity getContainedByName to attempt to use altnames
- Added the Physical class as a subclass to Entity and moved all Physical mud objects under it